# ClawPet

./: .env.example  .gitignore  CHANGELOG.md  index.html  moni.html  package-lock.json  package.json  pet_frames_manifest.txt  tsconfig.json  vite.config.ts  vite.lib.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/cli/posix/: openclaw
src-tauri/resources/cli/win32/: openclaw.cmd  update-user-path.ps1
src-tauri/resources/context/: BOOTSTRAP.clawpet.md  BOOTSTRAP.dragonclaw.md
src-tauri/resources/installer/windows/nsis/: installer.nsi
src-tauri/resources/preinstalled-skills/: preinstalled-manifest.json
src-tauri/resources/preinstalled-skills/openclaw-agent-evaluator/: SKILL.md
src-tauri/resources/preinstalled-skills/openclaw-agent-evaluator/agents/: openai.yaml
src-tauri/resources/preinstalled-skills/openclaw-agent-evaluator/assets/: eval-cases.sample.jsonl  scorecard-template.md
src-tauri/resources/preinstalled-skills/openclaw-agent-evaluator/references/: eval-strategy.md  trace-grading-lite.md
src-tauri/resources/preinstalled-skills/openclaw-agent-evaluator/scripts/: run_eval_suite.py
src-tauri/resources/preinstalled-skills/openclaw-agent-factory/: SKILL.md
src-tauri/resources/preinstalled-skills/openclaw-agent-generator/: SKILL.md
src-tauri/resources/preinstalled-skills/openclaw-agent-intake/: SKILL.md
src-tauri/resources/preinstalled-skills/openclaw-agent-reviewer/: SKILL.md
src-tauri/src/: lib.rs  macos_dev_notifier.applescript  macos_dev_notifier.js  macos_notifications.m  main.rs
src-tauri/src/_backup_pre_refactor/: lib.rs.stage11_20260404_095726.bak  lib.rs.stage13_20260404_101945.bak  lib.rs.stage15_20260404_103828.bak
src-tauri/src/app/: bootstrap.rs  mod.rs  notifications.rs  shell.rs  window.rs
src-tauri/src/openclaw/: agents.rs  channel_config.rs  channel_onboarding.rs  channel_runtime.rs  channel_write.rs  chat_api.rs  gateway.rs  json.rs  lobster.rs  message_parsing.rs  mod.rs  models.rs  onboard.rs  platform_channels.rs  platform_providers.rs  proxy.rs  resources.rs  role_workflow.rs  runtime.rs  skill_market.rs  sms_auth.rs  staff_runtime.rs  state.rs  test_support.rs  utils.rs
src-tauri/src/openclaw/config/: env.rs  mod.rs  paths.rs  schema.rs  write.rs
(+80 files in other folders)
