[package]
name = "keai-desktop-pet"
version = "0.2.0"
description = "KeAI desktop pet"
authors = ["hsy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "keai_desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
